cargo-features = ["edition"]

[package]
name = "net-parser-rs"
version = "0.1.0"
authors = ["Danny Browning <danny.browning@protectwise.com>"]
edition = "2018"

[dependencies]
arrayref = "~0.3"
nom = "~4.0"
error-chain = "~0.12"
futures = "~0.1"
log = "~0.4"

[dev-dependencies]
env_logger = "*"
hex-slice = "~0.1"
tokio = "~0.1"