[package]
name = "net-parser-rs"
version = "0.1.0"
authors = ["Danny Browning <danny.browning@protectwise.com>", "Eric Stevens <eric.stevens@protectwise.com>"]
description = "Basic network parser leveraging Rust and nom for safe and efficient packet parsing. Design influenced by pktparse-rs."
edition = "2018"
license = "MIT"

[dependencies]
arrayref = "~0.3"
nom = "~4.0"
error-chain = "~0.12"
futures = "~0.1"
log = "~0.4"

[dev-dependencies]
env_logger = "*"
hex-slice = "~0.1"
tokio = "~0.1"
