[package]
name = "net-parser-rs"
version = "0.2.0"
authors = ["ProtectWise, Inc. <https://www.protectwise.com>", "Danny Browning <danny.browning@protectwise.com>", "Eric Stevens <eric.stevens@protectwise.com>"]
description = "Basic network parser leveraging Rust and nom for safe and efficient packet parsing. Design influenced by pktparse-rs."
edition = "2018"
license = "MIT"
repository = "https://github.com/protectwise/net-parser-rs/"
readme = "README.md"
keywords=["pcap","packet","network"]
categories=["encoding","network-programming","parsing"]

[dependencies]
arrayref = "0.3"
byteorder = "1.3"
nom = "4"
failure = "0.1"
log = "0.4"

[dev-dependencies]
criterion = "0.2"
env_logger = "0.6"
hex-slice = "0.1"
regex = "1"
hex = "0.3"

[[bench]]
path = "benches/benches.rs"
name = "bench_net_parser"
harness = false
